sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_departpos/errors.duarouter
Error: Attribute 'departPos' in definition of a vehicle is empty.
Error: Invalid departPos definition for vehicle '1'
Quitting (on error).
